--- a/read_fasta.ipynb
+++ b/read_fasta.ipynb
@@ -24,7 +24,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('read-quality-analysis')",
+   "display_name": "Python 3.10.6 ('insaflu')",
    "language": "python",
    "name": "python3"
   },
@@ -43,7 +43,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1eaaecc0fc7cad8928217b3a8ae4fce6109b301cc421d7441f96db6be3aa0483"
+    "hash": "1358ab5cc9fad31f5aa8938f4d80c7fc1c7ab655fec6b753e75fda91ebbb6fc0"
    }
   }
  },
